--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
 		</div>
 		<div class="col-sm-10">
 		 <div class="header_main_5">
-		  <p>6 hours - 21 hours <br/>
-             *Weekends working</p>
+		  <p>Project under guidance of <br/>
+             Mrs C. Shymala Kumari</p>
 		 </div>
 		</div>
 <div id="google_translate_element"></div>
