--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                 <div class="item"> <!-- Second-Slide -->
                     <img src="img/2.jpg" alt="" class="img-responsive">
                     <div class="carousel-caption kb_caption kb_caption_right">
-                        <h1 data-animation="animated fadeInDown">Purcahse Fertilizers.</h1>
+                        <h1 data-animation="animated fadeInDown">Purchase Fertilizers.</h1>
                         <p data-animation="animated fadeInUp">Purchase cheap fertlizers and manures for your crops. Everything at the comfort of your home, get free delivery and discounts on latest products.</p>
 						<h4><a href="shop.html"class="button hvr-shutter-out-horizontal">Click Here</a></h4>
                     </div>
@@ -174,7 +174,7 @@
                 <div class="item"><!-- Third-Slide -->
                     <img src="img/3.jpg" alt="" class="img-responsive">
                     <div class="carousel-caption kb_caption kb_caption_right">
-                        <h1 data-animation="animated fadeInDown">Disese Prediction</h1>
+                        <h1 data-animation="animated fadeInDown">Disease Prediction</h1>
                         <p data-animation="animated fadeInUp">An AI based to smartly recognises the type of leaf disease. Self capable of identifying more than 200 types of commonly found diseases.</p>
 						<h4><a href="http://127.0.0.1:5000/disease-predict"class="button hvr-shutter-out-horizontal">Detect here</a></h4>
                     </div>
