--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 				<ul class="dropdown-menu dropdown-menu-large row">
                     <div class="col-sm-4">
                      <div class="header_4">                  
-                       <div class="ih-item square effect14 top_to_bottom"><a href="#">
+                       <div class="ih-item square effect14 top_to_bottom"><a href="http://127.0.0.1:5000/disease-predict">
                         <div class="img"><img src="img/20.jpg" alt="img"></div>
                         <div class="info">
                          <h3>Disease Prediction</h3>
@@ -122,7 +122,7 @@
                     </div>				
 					<div class="col-sm-4">
                      <div class="header_4">                  
-                      <div class="ih-item square effect14 top_to_bottom"><a href="#">
+                      <div class="ih-item square effect14 top_to_bottom"><a href="http://127.0.0.1:5000/fertilizer">
                         <div class="img"><img src="img/21.jpg" alt="img"></div>
                         <div class="info">
                          <h3>Fertilizer Based on Soil</h3>
@@ -133,7 +133,7 @@
                     </div>
 					<div class="col-sm-4">
                      <div class="header_4">                  
-                      <div class="ih-item square effect14 top_to_bottom"><a href="#">
+                      <div class="ih-item square effect14 top_to_bottom"><a href="http://127.0.0.1:5000/crop-recommend">
                         <div class="img"><img src="img/22.jpg" alt="img"></div>
                         <div class="info">
                          <h3>Recommendaion on weather</h3>
